--- a/asset/style.css
+++ b/asset/style.css
@@ -1,3 +1,8 @@
+#mainContainer {
+    background-color: #f1f6f7;
+    background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%230d0d0d' fill-opacity='0.48' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+    height: 800px; */
+}
 #navbar {
     background: rgb(53, 52, 52);
     border: solid;
@@ -11,25 +16,123 @@
 
 .jumbotron {
     background-color: rgb(165, 170, 177);
+    height: 150px;
+    padding-top: 20px;
 }
 
 .display-3 {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Julius Sans One', sans-serif; 
     font-size: 50px;
     color: white;
     
 }
 
-p {
-    font-family: 'Arvo', serif;
+p { 
+    font-family: 'Julius Sans One', sans-serif;
 }
 
+h2 {
+    font-family: 'Mukta', sans-serif;
+}
 #footer {
     padding-top: 30px;
+    padding-bottom: ;
     background-color: rgb(165, 170, 177);
     height: 100px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    margin-left: 0;
+    margin-top: 30px;
 }
 
 #bio {
-    margin-bottom: 70px;
+    margin-bottom: 100px;
+}
+
+#aboutMe {
+    border: solid;
+    border-width: 1px;
+    border-radius: 25px;
+    background-color: white;
+    /* background-image: url("vintage-concrete.png"); */
+    /* background-color:  */
+    /* background-color: #edf4f7;
+    background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%230d0d0d' fill-opacity='0.48' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E"); */
+    height: 400px;
+    margin-bottom: 120px;
+}
+#toolsContainer {
+    border: solid;
+    border-width: 1px;
+    border-radius: 25px;
+    background-color: white;
+    height: 400px;
+    margin-bottom: 120px;
+}
+
+
+/* Media Queries */
+
+@media (max-width: 800px) {
+    .navbar-brand {
+        text-align: center;
+        font-size: 20px;
+    }
+    .about-me-header {
+        text-align: center;
+        margin-left: 30px;
+    }
+    #navbarbrand {
+        text-align: center;
+        font-size: 30px;
+        position: relative;
+        left: 180px;
+    }
+    #aboutMe {
+        height: 1000px;
+    }
+    .jumbotron {
+        height: 280px;
+        text-align: center;
+    }
+    #mainContainer {
+        height: 2000px;
+    }
+    #profilepic {
+        position: relative;
+        left: 250px;
+    }
+}
+
+ @media (max-width: 500px) { 
+    .navbar {
+        padding:0;
+        display: flex;
+    }
+    .nav-link {
+        font-size: 20px;
+    }
+    #navbarbrand {
+        text-align: center;
+        font-size: 20px;
+        position: relative;
+        left: 50px; 
+    }
+    #profilepic{
+        position: relative;
+        left: 40px; 
+    }
+    #aboutParagraph {
+        text-align: center;
+    }
+    #portfolioHeader {
+        text-align: center;
+        margin-left: 40px;
+    }
+    #mainContainer {
+        height: 900;
+    }
+    
 }
