--- a/asset/style.css
+++ b/asset/style.css
@@ -1,7 +1,7 @@
 #mainContainer {
     background-color: #f1f6f7;
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%230d0d0d' fill-opacity='0.48' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
-    height: 800px; */
+    height: 1100px; 
 }
 #navbar {
     background: rgb(53, 52, 52);
@@ -72,6 +72,14 @@ h2 {
     margin-bottom: 120px;
 }
 
+h4 {
+    font-family: 'Mukta', sans-serif;
+}
+
+#insideToolsContainer {
+    margin-top: 50px;
+}
+
 
 /* Media Queries */
 
@@ -98,11 +106,14 @@ h2 {
         text-align: center;
     }
     #mainContainer {
-        height: 2000px;
+        height: 2700px;
     }
     #profilepic {
         position: relative;
         left: 250px;
+    }
+    #toolsContainer {
+        height: 1200px;
     }
 }
 
