--- a/asset/style.css
+++ b/asset/style.css
@@ -1,7 +1,7 @@
 #mainContainer {
     background-color: #f1f6f7;
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%230d0d0d' fill-opacity='0.48' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
-    height: 1100px; 
+    height: 1200px; 
 }
 #navbar {
     background: rgb(53, 52, 52);
@@ -9,6 +9,12 @@
     border-width: 1px;
 
 }
+
+/* div {
+   
+    -webkit-transform: scale(1.25, 1.25);
+    transform: scale(1.25, 1.25);
+} */
 
 .nav-link {
     color: white;
@@ -46,7 +52,7 @@ h2 {
     height: 80px;
     margin-left: 0;
     margin-top: 30px;
-    border-top: solid rgb(53, 52, 52)
+    border-top: solid rgb(53, 52, 52);
 }
 
 #bio {
@@ -56,15 +62,27 @@ h2 {
 #aboutMe {
     border: solid;
     border-width: 1px;
-    border-radius: 25px;
+    border-radius: 150px; 
     background-color: white;
     /* background-image: url("vintage-concrete.png"); */
     /* background-color:  */
     /* background-color: #edf4f7;
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%230d0d0d' fill-opacity='0.48' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E"); */
     height: 400px;
-    margin-bottom: 120px;
+    margin-bottom: 30px;
+    transition: box-shadow 1s;  
+
 }
+
+#profilepic {
+    width: 200px;
+    height: 180px;
+    border-radius: 50px; 
+}
+
+#aboutMe:hover {
+    box-shadow: 0 0 30px  rgb(53, 52, 52); 
+  }
 #toolsContainer {
     border: solid;
     border-width: 1px;
@@ -72,7 +90,12 @@ h2 {
     background-color: white;
     height: 400px;
     margin-bottom: 120px;
+    /* transition: box-shadow 1s;  */
 }
+
+/* #toolsContainer:hover {
+    box-shadow: 0 0 30px  rgb(53, 52, 52); 
+} */
 
 h4 {
     font-family: 'Mukta', sans-serif;
