--- a/asset/style.css
+++ b/asset/style.css
@@ -1,7 +1,7 @@
 #mainContainer {
     background-color: #f1f6f7;
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%230d0d0d' fill-opacity='0.48' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
-    height: 1200px; 
+    height: 1600px; 
 }
 #navbar {
     background: rgb(53, 52, 52);
@@ -10,28 +10,50 @@
 
 }
 
-/* div {
-   
-    -webkit-transform: scale(1.25, 1.25);
-    transform: scale(1.25, 1.25);
-} */
+
+.navbar-brand:hover {
+    -webkit-transform: scale(1.2); 
+   -ms-transform: scale(1.2); 
+   transform: scale(1.2); 
+
+}
+
+.socialMedia:hover {
+    -webkit-transform: scale(1.2); 
+   -ms-transform: scale(1.2); 
+   transform: scale(1.2); 
+
+}
 
 .nav-link {
     color: white;
 }
 
+.nav-link:hover {
+    -webkit-transform: scale(1.2); 
+   -ms-transform: scale(1.2); 
+   transform: scale(1.2); 
+
+}
+
 .jumbotron {
     background-color: rgb(165, 170, 177);
-    height: 150px;
-    padding-top: 20px;
+    height: 500px;
+    padding-top: 140px;
     border-bottom: solid rgb(53, 52, 52);
 }
 
 .display-3 {
     font-family: 'Julius Sans One', sans-serif; 
-    font-size: 50px;
+    font-size: 80px;
     color: white;
+    text-align: center;
     
+}
+
+.lead {
+    font-size: 15px;
+    text-align: center;
 }
 
 p { 
@@ -40,6 +62,7 @@ p {
 
 h2 {
     font-family: 'Mukta', sans-serif;
+    margin-top: 10px;
 }
 #footer {
     padding-top: 30px;
@@ -60,16 +83,17 @@ h2 {
 }
 
 #aboutMe {
-    border: solid;
+    /* border: solid; */
     border-width: 1px;
-    border-radius: 150px; 
+    /* border-radius: 25px;  */
     background-color: white;
     /* background-image: url("vintage-concrete.png"); */
     /* background-color:  */
     /* background-color: #edf4f7;
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%230d0d0d' fill-opacity='0.48' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E"); */
     height: 400px;
-    margin-bottom: 30px;
+    margin-top: 100px;
+    /* margin-bottom: 30px; */
     transition: box-shadow 1s;  
 
 }
@@ -78,31 +102,50 @@ h2 {
     width: 200px;
     height: 180px;
     border-radius: 50px; 
+    /* -webkit-transform: scale(.5); */
+    /* -ms-transform: scale(.5); */
+    /* transform: scale(.5); */
 }
 
+#profilepic:hover {
+     -webkit-transform: scale(1.2); 
+    -ms-transform: scale(1.2); 
+    transform: scale(1.2); 
+
+}
 #aboutMe:hover {
     box-shadow: 0 0 30px  rgb(53, 52, 52); 
   }
 #toolsContainer {
-    border: solid;
+    /* border: solid; */
     border-width: 1px;
-    border-radius: 25px;
+    text-align: center;
+    /* border-radius: 25px; */
     background-color: white;
     height: 400px;
+    margin-top: 80px; 
     margin-bottom: 120px;
-    /* transition: box-shadow 1s;  */
+    transition: box-shadow 1s; 
 }
 
-/* #toolsContainer:hover {
+#toolsContainer:hover {
     box-shadow: 0 0 30px  rgb(53, 52, 52); 
-} */
+} 
 
 h4 {
     font-family: 'Mukta', sans-serif;
+    /* margin-top: 100px;  */
 }
 
 #insideToolsContainer {
-    margin-top: 50px;
+    margin-top: 80px;
+}
+
+.icons:hover
+{
+        -webkit-transform: rotateZ(-30deg);
+        -ms-transform: rotateZ(-30deg);
+        transform: rotateZ(-30deg);
 }
 
 /* .card {
@@ -122,6 +165,10 @@ h4 {
 /* Media Queries */
 
 @media (max-width: 800px) {
+    
+    #aboutParagraph {
+        font-size: 35px;
+    }
     .navbar-brand {
         text-align: center;
         font-size: 20px;
@@ -137,16 +184,25 @@ h4 {
         left: 180px;
     }
     #aboutMe {
-        height: 1000px;
+        height: 2000px;
     }
     .jumbotron {
-        height: 280px;
+        height: 480px;
         text-align: center;
     }
     #mainContainer {
         height: 2700px;
+        width: 790px;
+    }
+    #footer {
+        width: 750px;
     }
     #profilepic {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 400px;
+        height: 334px;
         position: relative;
         left: 250px;
     }
