--- a/asset/style.css
+++ b/asset/style.css
@@ -164,6 +164,12 @@ h4 {
 
 /* Media Queries */
 
+.card:hover {
+    -webkit-transform: scale(1.1); 
+   -ms-transform: scale(1.1); 
+   transform: scale(1.1); 
+
+
 @media (max-width: 800px) {
     
     #aboutParagraph {
