--- a/asset/style.css
+++ b/asset/style.css
@@ -91,7 +91,7 @@ h2 {
     /* background-color:  */
     /* background-color: #edf4f7;
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%230d0d0d' fill-opacity='0.48' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E"); */
-    height: 400px;
+    /* height: 400px; */
     margin-top: 100px;
     /* margin-bottom: 30px; */
     transition: box-shadow 1s;  
@@ -102,6 +102,7 @@ h2 {
     width: 200px;
     height: 180px;
     border-radius: 75px; 
+    margin-left: 20px;
     /* -webkit-transform: scale(.5); */
     /* -ms-transform: scale(.5); */
     /* transform: scale(.5); */
@@ -117,15 +118,11 @@ h2 {
     box-shadow: 0 0 30px  rgb(53, 52, 52); 
   }
 #toolsContainer {
-    /* border: solid; */
     border-width: 1px;
-    text-align: center;
-    /* border-radius: 25px; */
     background-color: white;
-    height: 400px;
-    margin-top: 80px; 
-    margin-bottom: 120px;
+    margin-top: 100px;
     transition: box-shadow 1s; 
+    
 }
 
 #toolsContainer:hover {
@@ -148,32 +145,32 @@ h4 {
         transform: rotateZ(-30deg);
 }
 
-/* .card {
-    height: 00px;
-} */
+
 
 .card-img-top {
     height: 200px;
     /* width: 200px; */
 }
 
-/* .card {
-    margin-right: 20px;
-} */
-
-
-/* Media Queries */
 
 .card:hover {
     -webkit-transform: scale(1.1); 
    -ms-transform: scale(1.1); 
    transform: scale(1.1); 
 
+};
 
-@media (max-width: 800px) {
+.row {
+    margin-right: none;
+    margin-left: none;
+}
+
+
+@media (max-width: 800px) { 
     
     #aboutParagraph {
-        font-size: 35px;
+        font-size: 20px; 
+        text-align: center;
     }
     .navbar-brand {
         text-align: center;
@@ -189,35 +186,33 @@ h4 {
         position: relative;
         left: 180px;
     }
-    #aboutMe {
-        height: 2000px;
-    }
-    .jumbotron {
+    /* #aboutMe {
+        /* height: 2000px; */
+       
+    /* } */ 
+    /* .jumbotron {
         height: 480px;
         text-align: center;
-    }
-    #mainContainer {
+    } */
+    /* #mainContainer { 
         height: 2700px;
-        width: 813px;
-    }
-    #footer {
-        width: 813px;
-    }
-    #profilepic {
-        display: block;
+        width: 803px; 
+    } */
+    /* #footer {
+        /* width: 703px; 
+    }*/
+    /* #profilepic { */
+        /* display: block;
         margin-left: auto;
         margin-right: auto;
-        margin-bottom: 70px;
+        margin-bottom: 100px;
         width: 400px;
         height: 334px;
         position: relative;
         left: 250px;
-        border-radius: 115px;
-    }
-    #toolsContainer {
-        height: 1200px;
-    }
-}
+        border-radius: 115px; */
+    /* }  */
+} 
 
  @media (max-width: 500px) { 
     .navbar {
@@ -235,7 +230,8 @@ h4 {
     }
     #profilepic{
         position: relative;
-        left: 40px; 
+        /* left: 30px;  */
+        margin-bottom: 10px;
     }
     #aboutParagraph {
         text-align: center;
