--- a/asset/style.css
+++ b/asset/style.css
@@ -102,7 +102,8 @@ h2 {
     width: 200px;
     height: 180px;
     border-radius: 75px; 
-    margin-left: 20px;
+    margin: 0px auto;
+    /* margin-left: 40px; */
     /* -webkit-transform: scale(.5); */
     /* -ms-transform: scale(.5); */
     /* transform: scale(.5); */
@@ -176,10 +177,10 @@ h4 {
         text-align: center;
         font-size: 20px;
     }
-    .about-me-header {
+    /* .about-me-header {
         text-align: center;
         margin-left: 30px;
-    }
+    } */
     #navbarbrand {
         text-align: center;
         font-size: 30px;
@@ -201,20 +202,28 @@ h4 {
     /* #footer {
         /* width: 703px; 
     }*/
-    /* #profilepic { */
-        /* display: block;
-        margin-left: auto;
-        margin-right: auto;
+
+    #profilepic {
+        padding-left: 10px;
+    }
+    /* #profilepic { 
+        /* display: block; */
+        /* margin-left: 50; */
+        /* margin-right: auto;
         margin-bottom: 100px;
         width: 400px;
         height: 334px;
         position: relative;
         left: 250px;
-        border-radius: 115px; */
-    /* }  */
-} 
+        border-radius: 115px; */ 
+    /* }  
+}  */ 
 
  @media (max-width: 500px) { 
+     .row {
+         margin-right: 0px;
+         margin-left: 0px;
+     }
     .navbar {
         padding:0;
         display: flex;
@@ -244,4 +253,6 @@ h4 {
         height: 900;
     }
     
+}
+
 }
